--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=JPP_Spring_Boot
 # MySQL properties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/db_test
+spring.datasource.url=jdbc:mysql://localhost:3306/PP-3.1.3
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=9651000231
 
 # Hibernate properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
